<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZindukaMtaani</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="Events">Events</string>
      <string name="News">News</string>
       <string name="jobs">Jobs</string>
        <string name="news_anime">Technology</string>
        <string name="events_anime">Nairobi City</string>
        <string name="evets_date">Date</string>
        <string name="insights">Insights!</string>
         <string name="personals">Personalized Services</string>
         <string name="internships">Internships</string>
         <string name="select_town"><font color="#00CC66" size="20">Select Town</font></string>
         
    

</resources>